# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.87 2005/03/24 03:12:24 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)

  23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added livecd-kernel option to Kernel.py.

  21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Reenabled 'emerge sync' option. Removed get_random_salt() function and
  replaced call to crypt.crypt() with GLIUtility.hash_password()

  19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Temporarily disabled 'emerge sync' option in PortageTree due to python
  threading bug. Removed fifo code.

  16 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  PartitioningMain calls deactivate() in active notebook page in its
  deactivate(). PartitioningMain's deactivate() returns a value. Subtract
  1 from end value.

  7 Mar 2005; John Laliberte <allanonl@bu.edu>
  Added a custom package bar where you can fill in custom packages to emerge
  (space seperated list)

  6 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fix for swapped broadcast and netmask in Networking.py. Put empty try/except
  block around line to set snapshot URI in PortageTree.py. Loading an install
  profile uses a temporary GLIInstallProfile object to parse and then assigns
  it to the main object so the master object doesn't get left in an
  inconsistent state after a failed profile load.

  5 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Entry fields and slider in PartProperties.py now sync with each other.
  Sliding the slider will update the entry fields and changing an entry
  field will update the slider and the other entry field. Added help label
  below slider and above entry fields.

  1 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Quick fix to empty the fifo

  17 Feb 2005; John Laliberte <allanonl@bu.edu>
  ExtraPackages.py - Added a lot of UI reaction details.  It now