@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.87 2005/03/24 03:12:24 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.88 2005/03/25 18:03:44 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  25 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  gentoo-sources is default option in Kernel.py
 
   23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added livecd-kernel option to Kernel.py.
